<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="home_value">Home Value</string>
    <string name="down_payment">Down Payment</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="property_tax_rate">Property Tax Rate</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string-array name="terms_array">
        <item>Terms (years)</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>
    <string name="monthly_payment_amount">Monthly payment amount</string>
    <string name="total_interest_paid">Total interest paid</string>
    <string name="total_property_tax_paid">Total property tax paid</string>
    <string name="pay_off_date">Pay off date</string>
    <string name="error_field_required">Field Required</string>
</resources>
